ajout bouton reessayer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <textarea name="texte" class="texte" cols="30" rows="10"></textarea>
         <br>
         <input type="submit" value="Analyser" onclick={analyse()}>
+        <input type="submit" name="refresh" value="Reessayer" onclick="history.go(0)" />
         <br><br>
         <div id="resultat"></div>
 
